<resources>
    <string name="app_name">Ocorrencias Municipais</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lbEmail">"Email"</string>
    <string name="lbSenha">"Senha"</string>
    <string name="btEntrar">"Entrar"</string>
    <string name="btCriarNovaConta">"Criar Nova Conta"</string>
    <string name="btEsqueceuSenha">"Esqueceu Sua Senha?"</string>

    <string name="lbNomeUser">"Nome"</string>
    <string name="lbEmailUser">"Email"</string>
    <string name="lbTelefoneUser">"Telefone"</string>
    <string name="lbDtNascimento">"Data de Nascimento"</string>
    <string name="lbSenhaUser">"Senha"</string>
    <string name="lbConfirmarSenhaUser">"Confirmar Senha"</string>
    <string name="btCriarConta">"Criar Conta"</string>
    <string name="hint_text">"Criar Conta"</string>
    <string name="title_activity_teste">teste</string>


</resources>
