<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginEditText"
            android:layout_marginRight="@dimen/marginEditText"
            android:hint="@string/lbEmail" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginEditText"
            android:layout_marginRight="@dimen/marginEditText"
            android:hint="@string/lbSenha" />

        <Button
            android:id="@+id/btEntrar"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/marginButton"
            android:layout_marginTop="@dimen/marginButtonTop"
            android:layout_marginRight="@dimen/marginButton"
            android:text="@string/btEntrar"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/sizeButton"/>
    </LinearLayout>
</LinearLayout>